--- a/gestaoEscolar/templates/gestaoEscolar/avaliacao/avaliacao_listagem.html
+++ b/gestaoEscolar/templates/gestaoEscolar/avaliacao/avaliacao_listagem.html
@@ -47,16 +47,16 @@
             {% for avaliacao in avaliacoes %}
                 <tr>   
                     {% if turma.AnoLetivo.Situacao == 'A' %}
-                        <th><a href="{% url 'avaliacao_alterar' turma.id avaliacao.id %}">X</a></th>
-                        <th><a href="{% url 'avaliacao_deletar' turma.id avaliacao.id %}">X</a></th>
+                        <td><a href="{% url 'avaliacao_alterar' turma.id avaliacao.id %}">X</a></td>
+                        <td><a href="{% url 'avaliacao_deletar' turma.id avaliacao.id %}">X</a></td>
                     {% else %}
-                        <th>X</th>
-                        <th>X</th>
+                        <td>X</td>
+                        <td>X</td>
                     {% endif %}
-                    <th><a href="{% url 'avaliacao_consultar' turma.id avaliacao.id %}">{{ avaliacao.Nome }} </a></th>
-                    <th> {{ avaliacao.Data }} </th>
-                    <th>{{ avaliacao.Leciona.Professor.Nome }}</th>
-                    <th>{{ avaliacao.Leciona.Matriz_Item.Disciplina.Nome }}</th>
+                    <td><a href="{% url 'avaliacao_consultar' turma.id avaliacao.id %}">{{ avaliacao.Nome }} </a></td>
+                    <td> {{ avaliacao.Data }} </td>
+                    <td>{{ avaliacao.Leciona.Professor.Nome }}</td>
+                    <td>{{ avaliacao.Leciona.Matriz_Item.Disciplina.Nome }}</td>
                 </tr>
             {% endfor %}           
         </tbody>
