--- a/gestaoEscolar/templates/gestaoEscolar/bimestre/bimestre_form.html
+++ b/gestaoEscolar/templates/gestaoEscolar/bimestre/bimestre_form.html
@@ -1,4 +1,5 @@
 {% extends 'projeto/base/base.html' %}
+{% load filters %}
 
 {% block title %}
     {% if Tipo_Transacao == 'INS' %}
@@ -95,17 +96,17 @@
 
                 <div>
                     <label for="id_Data_Inicio">Data Inicial:</label> 
-                    <input type="date" name="Data_Inicio" required id="id_Data_Inicio" value='{{ bimestre_dados.Data_Inicio|date:"Y-m-d" }}'>
+                    <input type="date" name="Data_Inicio" required id="id_Data_Inicio" value='{{ bimestre_dados.Data_Inicio|data_retorno }}'>
                 </div>
 
                 <div>
                     <label for="id_Data_Limite_Notas">Data limite da entrega das notas:</label> 
-                    <input type="date" name="Data_Limite_Notas" required id="id_Data_Limite_Notas" value='{{ bimestre_dados.Data_Limite_Notas|date:"Y-m-d" }}'>
+                    <input type="date" name="Data_Limite_Notas" required id="id_Data_Limite_Notas" value='{{ bimestre_dados.Data_Limite_Notas|data_retorno }}'>
                 </div>
 
                 <div>
                     <label for="id_Data_Fim">Data Final:</label> 
-                    <input type="date" name="Data_Fim" required id="id_Data_Fim" value='{{ bimestre_dados.Data_Fim|date:"Y-m-d" }}'>
+                    <input type="date" name="Data_Fim" required id="id_Data_Fim" value='{{ bimestre_dados.Data_Fim|data_retorno }}'>
                 </div>
             </fieldset>
 
@@ -137,17 +138,17 @@
 
                 <div>
                     <label for="id_Data_Inicio">Data Inicial:</label> 
-                    <input type="date" name="Data_Inicio" disabled id="id_Data_Inicio" value='{{ bimestre_dados.Data_Inicio|date:"Y-m-d" }}'>
+                    <input type="date" name="Data_Inicio" disabled id="id_Data_Inicio" value='{{ bimestre_dados.Data_Inicio|data_retorno }}'>
                 </div>
 
                 <div>
                     <label for="id_Data_Limite_Notas">Data limite da entrega das notas:</label> 
-                    <input type="date" name="Data_Limite_Notas" disabled id="id_Data_Limite_Notas" value='{{ bimestre_dados.Data_Limite_Notas|date:"Y-m-d" }}'>
+                    <input type="date" name="Data_Limite_Notas" disabled id="id_Data_Limite_Notas" value='{{ bimestre_dados.Data_Limite_Notas|data_retorno }}'>
                 </div>
 
                 <div>
                     <label for="id_Data_Fim">Data Final:</label> 
-                    <input type="date" name="Data_Fim" disabled id="id_Data_Fim" value='{{ bimestre_dados.Data_Fim|date:"Y-m-d" }}'>
+                    <input type="date" name="Data_Fim" disabled id="id_Data_Fim" value='{{ bimestre_dados.Data_Fim|data_retorno }}'>
                 </div>
             </fieldset>
 
