--- a/gestaoEscolar/templates/gestaoEscolar/secretario/secretario_listagem.html
+++ b/gestaoEscolar/templates/gestaoEscolar/secretario/secretario_listagem.html
@@ -44,34 +44,20 @@
         </thead>
         <tbody>
             {% for secretario in secretarios %}
-                {% if secretarios is not None %}
-                    <tr>
-                        <th><a href="{% url 'secretario_alterar' secretario.id %}">X</a></th>
-                        <th><a href="{% url 'secretario_deletar' secretario.id %}">X</a></th>
-                        <th><a href="{% url 'secretario_consultar' secretario.id %}">{{ secretario.Nome }}</a></th>
-                        <th>{{ secretario.Sexo }}</th>
-                        <th>{{ secretario.Cpf }}</th>
-                        <th>{{ secretario.Rg }}</th>
-                        <th>{{ secretario.Usuario.email }}</th>
-                        {% if secretario.Usuario.is_active %}
-                            <th>Ativo</th>
-                        {% else %}
-                            <th>Inativo</th>
-                        {% endif %}
-                        
-                    </tr>
-                {% else %}
-                    <tr>
-                        <th>X</th>
-                        <th>X</th>
-                        <th></th>
-                        <th></th>
-                        <th></th>
-                        <th></th>
-                        <th></th>
-                        <th></th>
-                    </tr>
-                {% endif %}
+                <tr>
+                    <td><a href="{% url 'secretario_alterar' secretario.id %}">X</a></td>
+                    <td><a href="{% url 'secretario_deletar' secretario.id %}">X</a></td>
+                    <td><a href="{% url 'secretario_consultar' secretario.id %}">{{ secretario.Nome }}</a></td>
+                    <td>{{ secretario.Sexo }}</td>
+                    <td>{{ secretario.Cpf }}</td>
+                    <td>{{ secretario.Rg }}</td>
+                    <td>{{ secretario.Usuario.email }}</td>
+                    {% if secretario.Usuario.is_active %}
+                        <td>Ativo</td>
+                    {% else %}
+                        <td>Inativo</th>
+                    {% endif %}
+                </tr>
             {% endfor %}
         </tbody>
     </table>
