--- a/gestaoEscolar/templates/gestaoEscolar/aluno/aluno_form.html
+++ b/gestaoEscolar/templates/gestaoEscolar/aluno/aluno_form.html
@@ -1,4 +1,5 @@
 {% extends 'projeto/base/base.html' %}
+{% load filters %}
 
 {% block title %}
     {% if Tipo_Transacao == 'INS' %}
@@ -64,7 +65,7 @@
 
                 <div>
                     <label for="id_Data_Nascimento">Data de Nascimento:</label> 
-                    <input type="date" name="Data_Nascimento" required id="id_Data_Nascimento" value='{{ aluno_dados.Data_Nascimento|date:"Y-m-d" }}'>
+                    <input type="date" name="Data_Nascimento" required id="id_Data_Nascimento" value='{{ aluno_dados.Data_Nascimento|data_retorno }}'>
                 </div>
 
                 <div>
@@ -147,7 +148,7 @@
 
                     <div>
                         <label for="id_Data">Data da Matrícula:</label> 
-                        <input type="date" name="Data" disabled id="id_Data" value='{{ matricula_dados.Data|date:"Y-m-d" }}'>
+                        <input type="date" name="Data" disabled id="id_Data" value='{{ matricula_dados.Data|data_retorno }}'>
                     </div>
 
                     <div>
@@ -315,7 +316,7 @@
 
                 <div>
                     <label for="id_Data_Nascimento">Data de Nascimento:</label> 
-                    <input type="date" name="Data_Nascimento" disabled required id="id_Data_Nascimento" value='{{ aluno_dados.Data_Nascimento|date:"Y-m-d" }}'>
+                    <input type="date" name="Data_Nascimento" disabled required id="id_Data_Nascimento" value='{{ aluno_dados.Data_Nascimento|data_retorno }}'>
                 </div>
 
                 <div>
@@ -398,7 +399,7 @@
 
                     <div>
                         <label for="id_Data">Data da Matrícula:</label> 
-                        <input type="date" name="Data" disabled id="id_Data" value='{{ matricula_dados.Data|date:"Y-m-d" }}'>
+                        <input type="date" name="Data" disabled id="id_Data" value='{{ matricula_dados.Data|data_retorno }}'>
                     </div>
 
                     <div>
