--- a/gestaoEscolar/templates/gestaoEscolar/aula/aula_form.html
+++ b/gestaoEscolar/templates/gestaoEscolar/aula/aula_form.html
@@ -1,4 +1,5 @@
 {% extends 'projeto/base/base.html' %}
+{% load filters %}
 
 {% block title %}
     {% if Tipo_Transacao == 'INS' %}
@@ -46,12 +47,12 @@
             <fieldset>
                 <div>
                     <label for="id_Data">Data:</label> 
-                    <input type="date" name="Data" required id="id_Data" value='{{ aula_dados.Data|date:"Y-m-d" }}'>
+                    <input type="date" name="Data" required id="id_Data" value='{{ aula_dados.Data|data_retorno  }}'>
                 </div>
 
                 <div>
                     <label for="id_Tema">Tema:</label>
-                    <input type="text" name="Tema" maxlength="40" size="40" required id="id_Tema" value='{{ aula_dados.Tema }}'>
+                    <input type="text" name="Tema" maxlength="40"  required id="id_Tema" value='{{ aula_dados.Tema }}'>
                 </div>
                 {% if Tipo_Transacao == 'INS' %}
                     <div>
@@ -104,12 +105,12 @@
             <fieldset>
                 <div>
                     <label for="id_Data">Data:</label> 
-                    <input type="date" name="Data" disabled id="id_Data" value='{{ aula_dados.Data|date:"Y-m-d" }}'>
+                    <input type="date" name="Data" disabled id="id_Data" value='{{ aula_dados.Data|data_retorno  }}'>
                 </div>
 
                 <div>
                     <label for="id_Tema">Tema:</label>
-                    <input type="text" name="Tema" maxlength="40" size="40" disabled id="id_Tema" value='{{ aula_dados.Tema }}'>
+                    <input type="text" name="Tema" maxlength="40"  disabled id="id_Tema" value='{{ aula_dados.Tema }}'>
                 </div>
     
                 <div>
