--- a/gestaoEscolar/templates/gestaoEscolar/gestor/diretor_form.html
+++ b/gestaoEscolar/templates/gestaoEscolar/gestor/diretor_form.html
@@ -1,4 +1,5 @@
 {% extends 'projeto/base/base.html' %}
+{% load filters %}
 
 {% block title %}
     {% if Tipo_Transacao == 'INS' %}
@@ -20,7 +21,6 @@
     {% for erro in erros %}
         {{ erro }}
     {% endfor %}
-
 
     <form action="
             {% if Tipo_Transacao == 'INS' %}
@@ -48,7 +48,7 @@
 
             <div>
                 <label for="id_Data_Nascimento">Data de Nascimento:</label> 
-                <input type="date" name="Data_Nascimento" required id="id_Data_Nascimento" value='{{ gestor_dados.Data_Nascimento }}'>
+                <input type="date" name="Data_Nascimento" required id="id_Data_Nascimento" value='{{ gestor_dados.Data_Nascimento|data_retorno }}'>
             </div>
 
             <div>
