--- a/gestaoEscolar/templates/gestaoEscolar/serie/serie_listagem.html
+++ b/gestaoEscolar/templates/gestaoEscolar/serie/serie_listagem.html
@@ -17,23 +17,15 @@
         </thead>
         <tbody>
             {% for serie in series %}
-                {% if series is not None %}
-                    <tr>
-                        <th>{{ serie.Numero }}</th>
-                        {% if serie.Nivel_Escolaridade == 'F' %}
-                            <th>Fundamental</th>
-                        {% elif serie.Nivel_Escolaridade == 'M' %}
-                            <th>Médio</th>
-                        {% endif  %}
-                        <th><a href="{% url 'matriz_item_listagem' serie.id %}">X</a></th>
-                    </tr>
-                {% else %}
-                    <tr>
-                        <th></th>
-                        <th></th>
-                        <th>X</th>
-                    </tr>
-                {% endif %}
+                <tr>
+                    <td>{{ serie.Numero }}</td>
+                    {% if serie.Nivel_Escolaridade == 'F' %}
+                        <td>Fundamental</td>
+                    {% elif serie.Nivel_Escolaridade == 'M' %}
+                        <td>Médio</td>
+                    {% endif  %}
+                    <td><a href="{% url 'matriz_item_listagem' serie.id %}">X</a></td>
+                </tr>
             {% endfor %}
         </tbody>
     </table>
