Corrigindo erro nos combos de diretor alterar, configurando bootstrap, estilizando o menu, o main e o rodape

--- a/gestaoEscolar/templates/gestaoEscolar/autenticacao/esqueceu.html
+++ b/gestaoEscolar/templates/gestaoEscolar/autenticacao/esqueceu.html
@@ -2,6 +2,8 @@
 
 {% block title %}Esqueceu a senha{% endblock  %}
 
+{% block cabecalho %}{% endblock  %}
+
 {% block main %}
     <h3>Digite seu email:</h3>
     <span>{{ msg }}<span>
@@ -20,3 +22,5 @@
     </form>
     
 {% endblock  %}
+
+{% block rodape %}{% endblock %}
