--- a/gestaoEscolar/templates/gestaoEscolar/autenticacao/login_form.html
+++ b/gestaoEscolar/templates/gestaoEscolar/autenticacao/login_form.html
@@ -2,6 +2,7 @@
 
 {% block title %}Login de Usuário{% endblock  %}
 
+{% block cabecalho %}{% endblock  %}
 
 {% block main %}
     <span>{{ erro }}<span>
@@ -26,3 +27,5 @@
     </form>
     
 {% endblock  %}
+
+{% block rodape %}{% endblock %}
