--- a/gestaoEscolar/templates/gestaoEscolar/gestor/trocar_senha_form.html
+++ b/gestaoEscolar/templates/gestaoEscolar/gestor/trocar_senha_form.html
@@ -28,6 +28,7 @@
         </fieldset>
 
         <button type="submit">Salvar</button>
+        <a href="{% url 'gestao_escolar_inicio' %}"> Voltar</a>
     </form>
 
 {% endblock  %}
