--- a/templates/projeto/base/base.html
+++ b/templates/projeto/base/base.html
@@ -7,38 +7,30 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %} {% endblock %}</title>
 
+    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'projeto/style.css' %}">
+
     {% block linksEstaticos %} {% endblock %}
     {% block javascript %} {% endblock %}
 </head>
 <body>
     {% block cabecalho %}
-        {% if user.is_authenticated %}
-            <a href="{% url 'diretor_alterar' request.session.Pessoa %}">Diretor Alterar</a>
-            <a href="{% url 'trocar_senha' request.session.Pessoa %}">Senha Alterar</a>
-            <a href="{% url 'escola_novo' %}">Escola Novo</a>
-            {% if request.session.Escola %}
-                <a href="{% url 'escola_alterar' request.session.Escola %}">Escola Alterar</a>
-            {% endif %}
-            <a href="{% url 'secretario_listagem' %}">Secretário</a>
-            <a href="{% url 'professor_listagem' %}">Professor</a>
-            <a href="{% url 'aluno_listagem' %}">Aluno</a>
-            <a href="{% url 'ano_listagem' %}">Ano Letivo</a>
-            <a href="{% url 'disciplina_listagem' %}">Disciplina</a>
-            <a href="{% url 'serie_listagem' %}">Série</a>
-            <a href="{% url 'turma_listagem' %}">Turma</a>
-            <a href="{% url 'logout' %}">Encessar Sessão</a>
-            {{ user.username }}
-        {% endif %}
+        {% include "projeto/base/menu.html" %}
     {% endblock  %}
 
-    {% block main %}
     
-    {% endblock %}
+    <main class="main">
+        {% block main %}
+            
+        {% endblock %}
+    </main>
 
 
     {% block rodape %}
-    
+        {% include "projeto/base/rodape.html" %}
     {% endblock %}
-    
+
+    <script src="{% static 'bootstrap/js/jquery.min.js' %}"></script>
+    <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 </body>
 </html>
